<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.edu.tarc.mycontact.MainActivity">
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/baseline_cloud_download_24"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/baseline_cloud_upload_24"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_about_us"
        android:title="@string/about_us" />
</menu>